--- a/static/editHouse.hbs
+++ b/static/editHouse.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<form action="/houses" method="post">
+<form action="/editHouse" method="post">
 
     <input type="text" name="city" placeholder="city">
     <br>
@@ -18,6 +18,8 @@
     <input type="number" name="square" placeholder="square">
     <br>
     <input type="number" name="price" placeholder="prise">
+    <br>
+    <input type="number" name="id" placeholder="id">
     <br>
     <input type="submit">
 
