--- a/static/editUser.hbs
+++ b/static/editUser.hbs
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-<form action="/houses" method="post">
+<form action="/editUser" method="post">
 
-    <input type="text" name="city" placeholder="city">
+    <input type="email" name="email" placeholder="email">
     <br>
-    <input type="text" name="street" placeholder="street">
+    <input type="text" name="name" placeholder="name">
     <br>
-    <input type="number" name="square" placeholder="square">
+    <input type="password" name="password" placeholder="password">
     <br>
-    <input type="number" name="price" placeholder="prise">
+    <input type="number" name="id" placeholder="id">
     <br>
     <input type="submit">
 
