--- a/static/users.hbs
+++ b/static/users.hbs
@@ -9,16 +9,7 @@
 </head>
 <body>
 
-<form action="/auth" method="post">
-
-    <input type="email" name="email" placeholder="email">
-    <br>
-    <input type="password" name="password" placeholder="password">
-    <br>
-    <input type="submit" name="OK" placeholder="OK">
-
-
-</form>
+<form action="/users" method="post" ></form>
 
 </body>
 </html>
