--- a/static/register.hbs
+++ b/static/register.hbs
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<form action="/client" method="post">
+<form action="/users" method="post">
 
     <input type="email" name="email" placeholder="email">
     <br>
-    <input type="text" name="clientName" placeholder="name">
+    <input type="text" name="name" placeholder="name">
     <br>
     <input type="password" name="password" placeholder="password">
     <br>
